--- a/index.html
+++ b/index.html
@@ -128,24 +128,29 @@
         <div id="neuralNetwork">
             <canvas id="neuralCanvas"></canvas>
         </div>
-        <div class="text-center px-6 fade-in neural-hero">
-            <!-- Removed photo from cover section -->
-            <h1 class="text-5xl md:text-7xl font-bold mb-6">Menna Allah Saeed</h1>
-            <p class="text-xl md:text-2xl mb-8 text-white/90">AI & Machine Learning Engineer</p>
-            <p class="text-lg mb-12 max-w-2xl mx-auto text-white/80">
-                Building intelligent systems that solve real-world problems through cutting-edge AI and machine learning
-                technologies.
-            </p>
-            <div class="space-x-4">
-                <div class="flex flex-col sm:flex-row gap-4 sm:space-x-4 w-full items-center justify-center">
-                    <a href="#projects"
-                        class="bg-white text-blue-600 px-8 py-3 rounded-full font-semibold hover:bg-gray-100 transition-colors w-full sm:w-auto text-center">
-                        View My Work
-                    </a>
-                    <a href="#contact"
-                        class="border-2 border-white text-white px-8 py-3 rounded-full font-semibold hover:bg-white hover:text-blue-600 transition-colors w-full sm:w-auto text-center">
-                        Get In Touch
-                    </a>
+        <div class="flex flex-col-reverse md:flex-row items-center justify-between w-full max-w-7xl mx-auto px-4 md:px-20 fade-in neural-hero">
+            <div class="md:w-2/3 w-full text-center md:text-left">
+                <h1 class="text-5xl md:text-7xl font-bold mb-6">Menna Allah Saeed</h1>
+                <p class="text-xl md:text-2xl mb-8 text-white/90">AI & Machine Learning Engineer</p>
+                <p class="text-lg mb-12 max-w-2xl mx-auto md:mx-0 text-white/80">
+                    Building intelligent systems that solve real-world problems through cutting-edge AI and machine learning technologies.
+                </p>
+                <div class="space-x-4">
+                    <div class="flex flex-col sm:flex-row gap-4 sm:space-x-4 w-full items-center md:items-start justify-center md:justify-start">
+                        <a href="#projects"
+                            class="bg-white text-blue-600 px-8 py-3 rounded-full font-semibold hover:bg-gray-100 transition-colors w-full sm:w-auto text-center">
+                            View My Work
+                        </a>
+                        <a href="#contact"
+                            class="border-2 border-white text-white px-8 py-3 rounded-full font-semibold hover:bg-white hover:text-blue-600 transition-colors w-full sm:w-auto text-center">
+                            Get In Touch
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="mb-10 md:mb-0 md:w-1/3 flex justify-center">
+                <div class="w-60 h-60 md:w-80 md:h-80 rounded-full overflow-hidden shadow-2xl border-4 border-blue-400 bg-white flex items-center justify-center mb-5">
+                    <img src="photos/photo_new.jpg" alt="Menna Allah Saeed" class="w-full h-full object-cover object-center rounded-full" />
                 </div>
             </div>
         </div>
@@ -159,27 +164,18 @@
                 <div class="w-20 h-1 bg-blue-600 mx-auto"></div>
             </div>
             <div class="grid md:grid-cols-2 gap-12 items-center">
-                <div class="fade-in">
-                    <div class="w-64 h-64 mx-auto rounded-full overflow-hidden shadow-lg border-4 border-blue-400 bg-white flex items-center justify-center">
-                        <img src="photos/photo_new.jpg" alt="Menna Allah Saeed" class="w-full h-full object-cover rounded-full" />
+                <div class="fade-in col-span-2">
+                    <div class="about-card-simple bg-white/80 border border-blue-100 rounded-3xl shadow p-10 flex flex-col items-center gap-6">
+                        <h3 class="text-2xl font-semibold text-gray-800 mb-4">Passionate AI Engineer</h3>
+                        <p class="text-gray-600 mb-4 leading-relaxed text-center max-w-2xl">
+                            I’m a graduate of the Faculty of Computers and Data Science at Alexandria University, with a strong foundation in data science and a passion for Artificial Intelligence. Guided by curiosity, I explore how intelligent systems can turn ideas into meaningful solutions. What motivates me most is transforming complex concepts into practical technologies that enhance everyday experiences.
+                        </p>
+                        <div class="w-full flex justify-center">
+                            <span class="inline-block bg-blue-50 text-blue-700 px-6 py-3 rounded-xl font-bold text-lg shadow-sm border border-blue-100 mt-2 text-center">“Turning data into intelligence, and intelligence into action.”</span>
+                        </div>
                     </div>
                 </div>
-                <div class="fade-in">
-                    <h3 class="text-2xl font-semibold text-gray-800 mb-6">Passionate AI Engineer</h3>
-                    <p class="text-gray-600 mb-6 leading-relaxed text-justify">
-                        I am a graduate from the Faculty of Computers and Data Science at Alexandria University, with a
-                        strong background in data science and a deep passion for Artificial Intelligence. My journey has
-                        been shaped by curiosity and a drive to explore how intelligent systems can transform ideas into
-                        meaningful solutions.
-                    </p>
-                    <p class="text-gray-600 mb-8 leading-relaxed text-justify">
-                        I enjoy working with deep learning, NLP, and attention-based models, and I'm particularly
-                        interested in Generative AI. What excites me most is turning complex concepts into simple,
-                        impactful technologies that improve everyday experiences.
-                    </p>
-                </div>
             </div>
-        </div>
         </div>
     </section>
 
@@ -245,26 +241,6 @@
                 <h3 class="text-2xl font-semibold text-gray-800 mb-8 text-center">Professional Training & Internships</h3>
                 <div class="grid md:grid-cols-2 gap-8">
                     <!-- Current Training -->
-                    <div class="bg-white rounded-2xl shadow-lg p-6 border-l-4 border-blue-500">
-                        <div class="flex items-start justify-between mb-4">
-                            <div class="flex items-center space-x-3">
-                                <div class="w-12 h-12 bg-blue-100 rounded-lg flex items-center justify-center text-xl">
-                                    <i class="fa-solid fa-robot text-blue-600"></i>
-                                </div>
-                                <div>
-                                    <h4 class="font-semibold text-gray-800">Robotics Intern</h4>
-                                    <p class="text-sm text-blue-600">EME Borg • Aug 2025 - Present</p>
-                                </div>
-                            </div>
-                            <span class="px-2 py-1 bg-green-100 text-green-800 text-xs rounded-full font-medium">Current</span>
-                        </div>
-                        <div class="flex flex-wrap gap-2">
-                            <span class="px-3 py-1 bg-gray-100 text-gray-700 text-sm rounded-full">Arduino</span>
-                            <span class="px-3 py-1 bg-gray-100 text-gray-700 text-sm rounded-full">ESP32</span>
-                            <span class="px-3 py-1 bg-gray-100 text-gray-700 text-sm rounded-full">Microcontrollers</span>
-                        </div>
-                    </div>
-
                     <div class="bg-white rounded-2xl shadow-lg p-6 border-l-4 border-purple-500">
                         <div class="flex items-start justify-between mb-4">
                             <div class="flex items-center space-x-3">
@@ -285,6 +261,25 @@
                             <span class="px-3 py-1 bg-gray-100 text-gray-700 text-sm rounded-full">LLMs</span>
                             <span class="px-3 py-1 bg-gray-100 text-gray-700 text-sm rounded-full">AI
                                 Applications</span>
+                        </div>
+
+                    </div>
+                    <div class="bg-white rounded-2xl shadow-lg p-6 border-l-4 border-blue-500">
+                        <div class="flex items-start justify-between mb-4">
+                            <div class="flex items-center space-x-3">
+                                <div class="w-12 h-12 bg-blue-100 rounded-lg flex items-center justify-center text-xl">
+                                    <i class="fa-solid fa-robot text-blue-600"></i>
+                                </div>
+                                <div>
+                                    <h4 class="font-semibold text-gray-800">Robotics Intern</h4>
+                                    <p class="text-sm text-blue-600">EME Borg • Aug 2025 - Sep 2025</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="flex flex-wrap gap-2">
+                            <span class="px-3 py-1 bg-gray-100 text-gray-700 text-sm rounded-full">Arduino</span>
+                            <span class="px-3 py-1 bg-gray-100 text-gray-700 text-sm rounded-full">ESP32</span>
+                            <span class="px-3 py-1 bg-gray-100 text-gray-700 text-sm rounded-full">Microcontrollers</span>
                         </div>
                     </div>
 
